syntax-analyzer_DEBUG/src/syn.output
Grammar

    0 $accept: program $end

    1 program: lst_declarations
    2        | %empty

    3 lst_declarations: declaration lst_declarations
    4                 | declaration

    5 declaration: func_declaration
    6            | var_declaration
    7            | error

    8 $@1: %empty

    9 func_declaration: unq_declaration $@1 '(' params ')' '{' block_commands '}'

   10 var_declaration: unq_declaration ';'

   11 $@2: %empty

   12 unq_declaration: type $@2 ID

   13 params: %empty
   14       | lst_parameters

   15 lst_parameters: parameter ',' lst_parameters
   16               | parameter

   17 parameter: unq_declaration

   18 lst_params: %empty
   19           | lst_calling_params

   20 lst_calling_params: operation ',' lst_calling_params
   21                   | operation

   22 block_commands: command block_commands
   23               | %empty

   24 command: var_declaration
   25        | conditional_stmt
   26        | return_stmt
   27        | init_variable
   28        | iteration
   29        | input
   30        | output
   31        | '{' block_commands '}'
   32        | operation ';'

   33 conditional_stmt: IF_STMT '(' operation ')' command
   34                 | IF_STMT '(' operation ')' command ELSE_STMT command

   35 return_stmt: RETURN_STM operation ';'

   36 init_variable: init_stmt ';'

   37 iteration: FOR_STMT '(' loop_condition ')' command

   38 loop_condition: init_stmt ';' operation ';' update_stmt

   39 init_stmt: ID '=' operation

   40 update_stmt: init_stmt
   41            | %empty

   42 output: OUTPUT_WRITE '(' operation ')' ';'
   43       | OUTPUT_WRITELN '(' operation ')' ';'
   44       | OUTPUT_WRITE '(' STRING ')' ';'
   45       | OUTPUT_WRITELN '(' STRING ')' ';'

   46 input: INPUT_READ '(' expression ')' ';'

   47 func_calling: ID '(' lst_params ')'

   48 expression: func_calling
   49           | ID
   50           | const
   51           | single_operation

   52 const: number
   53      | NIL_CNST

   54 number: NUM_INT
   55       | NUM_FLOAT

   56 type: type_lst
   57     | type_number

   58 type_lst: type_number T_LIST

   59 type_number: T_INT
   60            | T_FLOAT

   61 operation: binary_operation

   62 binary_operation: arith_binary
   63                 | lst_binary
   64                 | binary_operation relation_operator expression
   65                 | binary_operation log_operator expression

   66 single_operation: arith_single
   67                 | lst_single
   68                 | '!' expression

   69 arith_binary: arith_binary '+' expression
   70             | arith_binary '-' expression
   71             | arith_binary '*' expression
   72             | arith_binary '/' expression
   73             | expression

   74 arith_single: '+' expression
   75             | '-' expression

   76 lst_single: '%' expression
   77           | '?' expression

   78 lst_binary: expression FILTER expression
   79           | expression MAP expression
   80           | expression ':' expression

   81 log_operator: AND
   82             | OR

   83 relation_operator: GREATER
   84                  | GREATER_EQ
   85                  | LESS
   86                  | LESS_EQ
   87                  | EQUAL
   88                  | NOT_EQ


Terminals, with rules where they appear

    $end (0) 0
    '!' <token> (33) 68
    '%' <token> (37) 76
    '(' <token> (40) 9 33 34 37 42 43 44 45 46 47
    ')' <token> (41) 9 33 34 37 42 43 44 45 46 47
    '*' <token> (42) 71
    '+' <token> (43) 69 74
    ',' <token> (44) 15 20
    '-' <token> (45) 70 75
    '/' <token> (47) 72
    ':' <token> (58) 80
    ';' <token> (59) 10 32 35 36 38 42 43 44 45 46
    '=' <token> (61) 39
    '?' <token> (63) 77
    '{' <token> (123) 9 31
    '}' <token> (125) 9 31
    error (256) 7
    NUM_INT <token> (258) 54
    NUM_FLOAT <token> (259) 55
    STRING <token> (260) 44 45
    NIL_CNST <token> (261) 53
    ID <token> (262) 12 39 47 49
    RETURN_STM <token> (263) 35
    T_INT <token> (264) 59
    T_FLOAT <token> (265) 60
    T_LIST <token> (266) 58
    IF_STMT <token> (267) 33 34
    ELSE_STMT <token> (268) 34
    FOR_STMT <token> (269) 37
    OUTPUT_WRITE <token> (270) 42 44
    OUTPUT_WRITELN <token> (271) 43 45
    INPUT_READ <token> (272) 46
    AND <token> (273) 81
    OR <token> (274) 82
    GREATER <token> (275) 83
    GREATER_EQ <token> (276) 84
    LESS <token> (277) 85
    LESS_EQ <token> (278) 86
    EQUAL <token> (279) 87
    NOT_EQ <token> (280) 88
    FILTER <token> (281) 78
    MAP <token> (282) 79


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program <node> (44)
        on left: 1 2
        on right: 0
    lst_declarations <node> (45)
        on left: 3 4
        on right: 1 3
    declaration <node> (46)
        on left: 5 6 7
        on right: 3 4
    func_declaration <node> (47)
        on left: 9
        on right: 5
    $@1 (48)
        on left: 8
        on right: 9
    var_declaration <node> (49)
        on left: 10
        on right: 6 24
    unq_declaration <node> (50)
        on left: 12
        on right: 9 10 17
    $@2 (51)
        on left: 11
        on right: 12
    params (52)
        on left: 13 14
        on right: 9
    lst_parameters <node> (53)
        on left: 15 16
        on right: 14 15
    parameter <node> (54)
        on left: 17
        on right: 15 16
    lst_params (55)
        on left: 18 19
        on right: 47
    lst_calling_params (56)
        on left: 20 21
        on right: 19 20
    block_commands <node> (57)
        on left: 22 23
        on right: 9 22 31
    command <node> (58)
        on left: 24 25 26 27 28 29 30 31 32
        on right: 22 33 34 37
    conditional_stmt <node> (59)
        on left: 33 34
        on right: 25
    return_stmt <node> (60)
        on left: 35
        on right: 26
    init_variable <node> (61)
        on left: 36
        on right: 27
    iteration <node> (62)
        on left: 37
        on right: 28
    loop_condition <node> (63)
        on left: 38
        on right: 37
    init_stmt <node> (64)
        on left: 39
        on right: 36 38 40
    update_stmt <node> (65)
        on left: 40 41
        on right: 38
    output <node> (66)
        on left: 42 43 44 45
        on right: 30
    input <node> (67)
        on left: 46
        on right: 29
    func_calling <node> (68)
        on left: 47
        on right: 48
    expression <node> (69)
        on left: 48 49 50 51
        on right: 46 64 65 68 69 70 71 72 73 74 75 76 77 78 79 80
    const <node> (70)
        on left: 52 53
        on right: 50
    number <node> (71)
        on left: 54 55
        on right: 52
    type <node> (72)
        on left: 56 57
        on right: 12
    type_lst <node> (73)
        on left: 58
        on right: 56
    type_number <node> (74)
        on left: 59 60
        on right: 57 58
    operation <node> (75)
        on left: 61
        on right: 20 21 32 33 34 35 38 39 42 43
    binary_operation <node> (76)
        on left: 62 63 64 65
        on right: 61 64 65
    single_operation <node> (77)
        on left: 66 67 68
        on right: 51
    arith_binary <node> (78)
        on left: 69 70 71 72 73
        on right: 62 69 70 71 72
    arith_single <node> (79)
        on left: 74 75
        on right: 66
    lst_single <node> (80)
        on left: 76 77
        on right: 67
    lst_binary <node> (81)
        on left: 78 79 80
        on right: 63
    log_operator <node> (82)
        on left: 81 82
        on right: 65
    relation_operator <node> (83)
        on left: 83 84 85 86 87 88
        on right: 64


State 0

    0 $accept: . program $end

    error    shift, and go to state 1
    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3

    $end  reduce using rule 2 (program)

    program           go to state 4
    lst_declarations  go to state 5
    declaration       go to state 6
    func_declaration  go to state 7
    var_declaration   go to state 8
    unq_declaration   go to state 9
    type              go to state 10
    type_lst          go to state 11
    type_number       go to state 12


State 1

    7 declaration: error .

    $end     reduce using rule 7 (declaration)
    error    reduce using rule 7 (declaration)
    T_INT    reduce using rule 7 (declaration)
    T_FLOAT  reduce using rule 7 (declaration)


State 2

   59 type_number: T_INT .

    ID      reduce using rule 59 (type_number)
    T_LIST  reduce using rule 59 (type_number)


State 3

   60 type_number: T_FLOAT .

    ID      reduce using rule 60 (type_number)
    T_LIST  reduce using rule 60 (type_number)


State 4

    0 $accept: program . $end

    $end  shift, and go to state 13


State 5

    1 program: lst_declarations .

    $end  reduce using rule 1 (program)


State 6

    3 lst_declarations: declaration . lst_declarations
    4                 | declaration .

    error    shift, and go to state 1
    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3

    $end  reduce using rule 4 (lst_declarations)

    lst_declarations  go to state 14
    declaration       go to state 6
    func_declaration  go to state 7
    var_declaration   go to state 8
    unq_declaration   go to state 9
    type              go to state 10
    type_lst          go to state 11
    type_number       go to state 12


State 7

    5 declaration: func_declaration .

    $end     reduce using rule 5 (declaration)
    error    reduce using rule 5 (declaration)
    T_INT    reduce using rule 5 (declaration)
    T_FLOAT  reduce using rule 5 (declaration)


State 8

    6 declaration: var_declaration .

    $end     reduce using rule 6 (declaration)
    error    reduce using rule 6 (declaration)
    T_INT    reduce using rule 6 (declaration)
    T_FLOAT  reduce using rule 6 (declaration)


State 9

    9 func_declaration: unq_declaration . $@1 '(' params ')' '{' block_commands '}'
   10 var_declaration: unq_declaration . ';'

    ';'  shift, and go to state 15

    '('  reduce using rule 8 ($@1)

    $@1  go to state 16


State 10

   12 unq_declaration: type . $@2 ID

    ID  reduce using rule 11 ($@2)

    $@2  go to state 17


State 11

   56 type: type_lst .

    ID  reduce using rule 56 (type)


State 12

   57 type: type_number .
   58 type_lst: type_number . T_LIST

    T_LIST  shift, and go to state 18

    ID  reduce using rule 57 (type)


State 13

    0 $accept: program $end .

    $default  accept


State 14

    3 lst_declarations: declaration lst_declarations .

    $end  reduce using rule 3 (lst_declarations)


State 15

   10 var_declaration: unq_declaration ';' .

    $end     reduce using rule 10 (var_declaration)
    error    reduce using rule 10 (var_declaration)
    T_INT    reduce using rule 10 (var_declaration)
    T_FLOAT  reduce using rule 10 (var_declaration)


State 16

    9 func_declaration: unq_declaration $@1 . '(' params ')' '{' block_commands '}'

    '('  shift, and go to state 19


State 17

   12 unq_declaration: type $@2 . ID

    ID  shift, and go to state 20


State 18

   58 type_lst: type_number T_LIST .

    ID  reduce using rule 58 (type_lst)


State 19

    9 func_declaration: unq_declaration $@1 '(' . params ')' '{' block_commands '}'

    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3

    ')'  reduce using rule 13 (params)

    unq_declaration  go to state 21
    params           go to state 22
    lst_parameters   go to state 23
    parameter        go to state 24
    type             go to state 151
    type_lst         go to state 11
    type_number      go to state 12


State 20

   12 unq_declaration: type $@2 ID .

    '('  reduce using rule 12 (unq_declaration)
    ';'  reduce using rule 12 (unq_declaration)


State 21

   17 parameter: unq_declaration .

    ')'  reduce using rule 17 (parameter)
    ','  reduce using rule 17 (parameter)


State 22

    9 func_declaration: unq_declaration $@1 '(' params . ')' '{' block_commands '}'

    ')'  shift, and go to state 25


State 23

   14 params: lst_parameters .

    ')'  reduce using rule 14 (params)


State 24

   15 lst_parameters: parameter . ',' lst_parameters
   16               | parameter .

    ','  shift, and go to state 26

    ')'  reduce using rule 16 (lst_parameters)


State 25

    9 func_declaration: unq_declaration $@1 '(' params ')' . '{' block_commands '}'

    '{'  shift, and go to state 27


State 26

   15 lst_parameters: parameter ',' . lst_parameters

    T_INT    shift, and go to state 2
    T_FLOAT  shift, and go to state 3

    unq_declaration  go to state 21
    lst_parameters   go to state 28
    parameter        go to state 24
    type             go to state 151
    type_lst         go to state 11
    type_number      go to state 12


State 27

    9 func_declaration: unq_declaration $@1 '(' params ')' '{' . block_commands '}'

    NUM_INT         shift, and go to state 29
    NUM_FLOAT       shift, and go to state 30
    NIL_CNST        shift, and go to state 31
    ID              shift, and go to state 32
    RETURN_STM      shift, and go to state 33
    T_INT           shift, and go to state 2
    T_FLOAT         shift, and go to state 3
    IF_STMT         shift, and go to state 34
    FOR_STMT        shift, and go to state 35
    OUTPUT_WRITE    shift, and go to state 36
    OUTPUT_WRITELN  shift, and go to state 37
    INPUT_READ      shift, and go to state 38
    '{'             shift, and go to state 39
    '+'             shift, and go to state 40
    '-'             shift, and go to state 41
    '%'             shift, and go to state 42
    '?'             shift, and go to state 43
    '!'             shift, and go to state 44

    '}'  reduce using rule 23 (block_commands)

    var_declaration   go to state 45
    unq_declaration   go to state 46
    block_commands    go to state 47
    command           go to state 48
    conditional_stmt  go to state 49
    return_stmt       go to state 50
    init_variable     go to state 51
    iteration         go to state 52
    init_stmt         go to state 53
    output            go to state 54
    input             go to state 55
    func_calling      go to state 56
    expression        go to state 57
    const             go to state 58
    number            go to state 59
    type              go to state 152
    type_lst          go to state 11
    type_number       go to state 12
    operation         go to state 60
    binary_operation  go to state 61
    single_operation  go to state 62
    arith_binary      go to state 63
    arith_single      go to state 64
    lst_single        go to state 65
    lst_binary        go to state 66


State 28

   15 lst_parameters: parameter ',' lst_parameters .

    ')'  reduce using rule 15 (lst_parameters)


State 29

   54 number: NUM_INT .

    ';'         reduce using rule 54 (number)
    AND         reduce using rule 54 (number)
    OR          reduce using rule 54 (number)
    GREATER     reduce using rule 54 (number)
    GREATER_EQ  reduce using rule 54 (number)
    LESS        reduce using rule 54 (number)
    LESS_EQ     reduce using rule 54 (number)
    EQUAL       reduce using rule 54 (number)
    NOT_EQ      reduce using rule 54 (number)
    '+'         reduce using rule 54 (number)
    '-'         reduce using rule 54 (number)
    '*'         reduce using rule 54 (number)
    '/'         reduce using rule 54 (number)
    FILTER      reduce using rule 54 (number)
    MAP         reduce using rule 54 (number)
    ':'         reduce using rule 54 (number)


State 30

   55 number: NUM_FLOAT .

    ';'         reduce using rule 55 (number)
    AND         reduce using rule 55 (number)
    OR          reduce using rule 55 (number)
    GREATER     reduce using rule 55 (number)
    GREATER_EQ  reduce using rule 55 (number)
    LESS        reduce using rule 55 (number)
    LESS_EQ     reduce using rule 55 (number)
    EQUAL       reduce using rule 55 (number)
    NOT_EQ      reduce using rule 55 (number)
    '+'         reduce using rule 55 (number)
    '-'         reduce using rule 55 (number)
    '*'         reduce using rule 55 (number)
    '/'         reduce using rule 55 (number)
    FILTER      reduce using rule 55 (number)
    MAP         reduce using rule 55 (number)
    ':'         reduce using rule 55 (number)


State 31

   53 const: NIL_CNST .

    ';'         reduce using rule 53 (const)
    AND         reduce using rule 53 (const)
    OR          reduce using rule 53 (const)
    GREATER     reduce using rule 53 (const)
    GREATER_EQ  reduce using rule 53 (const)
    LESS        reduce using rule 53 (const)
    LESS_EQ     reduce using rule 53 (const)
    EQUAL       reduce using rule 53 (const)
    NOT_EQ      reduce using rule 53 (const)
    '+'         reduce using rule 53 (const)
    '-'         reduce using rule 53 (const)
    '*'         reduce using rule 53 (const)
    '/'         reduce using rule 53 (const)
    FILTER      reduce using rule 53 (const)
    MAP         reduce using rule 53 (const)
    ':'         reduce using rule 53 (const)


State 32

   39 init_stmt: ID . '=' operation
   47 func_calling: ID . '(' lst_params ')'
   49 expression: ID .

    '('  shift, and go to state 67
    '='  shift, and go to state 68

    ';'         reduce using rule 49 (expression)
    AND         reduce using rule 49 (expression)
    OR          reduce using rule 49 (expression)
    GREATER     reduce using rule 49 (expression)
    GREATER_EQ  reduce using rule 49 (expression)
    LESS        reduce using rule 49 (expression)
    LESS_EQ     reduce using rule 49 (expression)
    EQUAL       reduce using rule 49 (expression)
    NOT_EQ      reduce using rule 49 (expression)
    '+'         reduce using rule 49 (expression)
    '-'         reduce using rule 49 (expression)
    '*'         reduce using rule 49 (expression)
    '/'         reduce using rule 49 (expression)
    FILTER      reduce using rule 49 (expression)
    MAP         reduce using rule 49 (expression)
    ':'         reduce using rule 49 (expression)


State 33

   35 return_stmt: RETURN_STM . operation ';'

    NUM_INT    shift, and go to state 29
    NUM_FLOAT  shift, and go to state 30
    NIL_CNST   shift, and go to state 31
    ID         shift, and go to state 69
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '%'        shift, and go to state 42
    '?'        shift, and go to state 43
    '!'        shift, and go to state 44

    func_calling      go to state 56
    expression        go to state 57
    const             go to state 58
    number            go to state 59
    operation         go to state 70
    binary_operation  go to state 61
    single_operation  go to state 62
    arith_binary      go to state 63
    arith_single      go to state 64
    lst_single        go to state 65
    lst_binary        go to state 66


State 34

   33 conditional_stmt: IF_STMT . '(' operation ')' command
   34                 | IF_STMT . '(' operation ')' command ELSE_STMT command

    '('  shift, and go to state 71


State 35

   37 iteration: FOR_STMT . '(' loop_condition ')' command

    '('  shift, and go to state 72


State 36

   42 output: OUTPUT_WRITE . '(' operation ')' ';'
   44       | OUTPUT_WRITE . '(' STRING ')' ';'

    '('  shift, and go to state 73


State 37

   43 output: OUTPUT_WRITELN . '(' operation ')' ';'
   45       | OUTPUT_WRITELN . '(' STRING ')' ';'

    '('  shift, and go to state 74


State 38

   46 input: INPUT_READ . '(' expression ')' ';'

    '('  shift, and go to state 75


State 39

   31 command: '{' . block_commands '}'

    NUM_INT         shift, and go to state 29
    NUM_FLOAT       shift, and go to state 30
    NIL_CNST        shift, and go to state 31
    ID              shift, and go to state 32
    RETURN_STM      shift, and go to state 33
    T_INT           shift, and go to state 2
    T_FLOAT         shift, and go to state 3
    IF_STMT         shift, and go to state 34
    FOR_STMT        shift, and go to state 35
    OUTPUT_WRITE    shift, and go to state 36
    OUTPUT_WRITELN  shift, and go to state 37
    INPUT_READ      shift, and go to state 38
    '{'             shift, and go to state 39
    '+'             shift, and go to state 40
    '-'             shift, and go to state 41
    '%'             shift, and go to state 42
    '?'             shift, and go to state 43
    '!'             shift, and go to state 44

    '}'  reduce using rule 23 (block_commands)

    var_declaration   go to state 45
    unq_declaration   go to state 46
    block_commands    go to state 76
    command           go to state 48
    conditional_stmt  go to state 49
    return_stmt       go to state 50
    init_variable     go to state 51
    iteration         go to state 52
    init_stmt         go to state 53
    output            go to state 54
    input             go to state 55
    func_calling      go to state 56
    expression        go to state 57
    const             go to state 58
    number            go to state 59
    type              go to state 152
    type_lst          go to state 11
    type_number       go to state 12
    operation         go to state 60
    binary_operation  go to state 61
    single_operation  go to state 62
    arith_binary      go to state 63
    arith_single      go to state 64
    lst_single        go to state 65
    lst_binary        go to state 66


State 40

   74 arith_single: '+' . expression

    NUM_INT    shift, and go to state 29
    NUM_FLOAT  shift, and go to state 30
    NIL_CNST   shift, and go to state 31
    ID         shift, and go to state 69
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '%'        shift, and go to state 42
    '?'        shift, and go to state 43
    '!'        shift, and go to state 44

    func_calling      go to state 56
    expression        go to state 77
    const             go to state 58
    number            go to state 59
    single_operation  go to state 62
    arith_single      go to state 64
    lst_single        go to state 65


State 41

   75 arith_single: '-' . expression

    NUM_INT    shift, and go to state 29
    NUM_FLOAT  shift, and go to state 30
    NIL_CNST   shift, and go to state 31
    ID         shift, and go to state 69
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '%'        shift, and go to state 42
    '?'        shift, and go to state 43
    '!'        shift, and go to state 44

    func_calling      go to state 56
    expression        go to state 78
    const             go to state 58
    number            go to state 59
    single_operation  go to state 62
    arith_single      go to state 64
    lst_single        go to state 65


State 42

   76 lst_single: '%' . expression

    NUM_INT    shift, and go to state 29
    NUM_FLOAT  shift, and go to state 30
    NIL_CNST   shift, and go to state 31
    ID         shift, and go to state 69
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '%'        shift, and go to state 42
    '?'        shift, and go to state 43
    '!'        shift, and go to state 44

    func_calling      go to state 56
    expression        go to state 79
    const             go to state 58
    number            go to state 59
    single_operation  go to state 62
    arith_single      go to state 64
    lst_single        go to state 65


State 43

   77 lst_single: '?' . expression

    NUM_INT    shift, and go to state 29
    NUM_FLOAT  shift, and go to state 30
    NIL_CNST   shift, and go to state 31
    ID         shift, and go to state 69
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '%'        shift, and go to state 42
    '?'        shift, and go to state 43
    '!'        shift, and go to state 44

    func_calling      go to state 56
    expression        go to state 80
    const             go to state 58
    number            go to state 59
    single_operation  go to state 62
    arith_single      go to state 64
    lst_single        go to state 65


State 44

   68 single_operation: '!' . expression

    NUM_INT    shift, and go to state 29
    NUM_FLOAT  shift, and go to state 30
    NIL_CNST   shift, and go to state 31
    ID         shift, and go to state 69
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '%'        shift, and go to state 42
    '?'        shift, and go to state 43
    '!'        shift, and go to state 44

    func_calling      go to state 56
    expression        go to state 81
    const             go to state 58
    number            go to state 59
    single_operation  go to state 62
    arith_single      go to state 64
    lst_single        go to state 65


State 45

   24 command: var_declaration .

    NUM_INT         reduce using rule 24 (command)
    NUM_FLOAT       reduce using rule 24 (command)
    NIL_CNST        reduce using rule 24 (command)
    ID              reduce using rule 24 (command)
    RETURN_STM      reduce using rule 24 (command)
    T_INT           reduce using rule 24 (command)
    T_FLOAT         reduce using rule 24 (command)
    IF_STMT         reduce using rule 24 (command)
    FOR_STMT        reduce using rule 24 (command)
    OUTPUT_WRITE    reduce using rule 24 (command)
    OUTPUT_WRITELN  reduce using rule 24 (command)
    INPUT_READ      reduce using rule 24 (command)
    '{'             reduce using rule 24 (command)
    '}'             reduce using rule 24 (command)
    '+'             reduce using rule 24 (command)
    '-'             reduce using rule 24 (command)
    '%'             reduce using rule 24 (command)
    '?'             reduce using rule 24 (command)
    '!'             reduce using rule 24 (command)


State 46

   10 var_declaration: unq_declaration . ';'

    ';'  shift, and go to state 153


State 47

    9 func_declaration: unq_declaration $@1 '(' params ')' '{' block_commands . '}'

    '}'  shift, and go to state 82


State 48

   22 block_commands: command . block_commands

    NUM_INT         shift, and go to state 29
    NUM_FLOAT       shift, and go to state 30
    NIL_CNST        shift, and go to state 31
    ID              shift, and go to state 32
    RETURN_STM      shift, and go to state 33
    T_INT           shift, and go to state 2
    T_FLOAT         shift, and go to state 3
    IF_STMT         shift, and go to state 34
    FOR_STMT        shift, and go to state 35
    OUTPUT_WRITE    shift, and go to state 36
    OUTPUT_WRITELN  shift, and go to state 37
    INPUT_READ      shift, and go to state 38
    '{'             shift, and go to state 39
    '+'             shift, and go to state 40
    '-'             shift, and go to state 41
    '%'             shift, and go to state 42
    '?'             shift, and go to state 43
    '!'             shift, and go to state 44

    '}'  reduce using rule 23 (block_commands)

    var_declaration   go to state 45
    unq_declaration   go to state 46
    block_commands    go to state 83
    command           go to state 48
    conditional_stmt  go to state 49
    return_stmt       go to state 50
    init_variable     go to state 51
    iteration         go to state 52
    init_stmt         go to state 53
    output            go to state 54
    input             go to state 55
    func_calling      go to state 56
    expression        go to state 57
    const             go to state 58
    number            go to state 59
    type              go to state 152
    type_lst          go to state 11
    type_number       go to state 12
    operation         go to state 60
    binary_operation  go to state 61
    single_operation  go to state 62
    arith_binary      go to state 63
    arith_single      go to state 64
    lst_single        go to state 65
    lst_binary        go to state 66


State 49

   25 command: conditional_stmt .

    NUM_INT         reduce using rule 25 (command)
    NUM_FLOAT       reduce using rule 25 (command)
    NIL_CNST        reduce using rule 25 (command)
    ID              reduce using rule 25 (command)
    RETURN_STM      reduce using rule 25 (command)
    T_INT           reduce using rule 25 (command)
    T_FLOAT         reduce using rule 25 (command)
    IF_STMT         reduce using rule 25 (command)
    FOR_STMT        reduce using rule 25 (command)
    OUTPUT_WRITE    reduce using rule 25 (command)
    OUTPUT_WRITELN  reduce using rule 25 (command)
    INPUT_READ      reduce using rule 25 (command)
    '{'             reduce using rule 25 (command)
    '}'             reduce using rule 25 (command)
    '+'             reduce using rule 25 (command)
    '-'             reduce using rule 25 (command)
    '%'             reduce using rule 25 (command)
    '?'             reduce using rule 25 (command)
    '!'             reduce using rule 25 (command)


State 50

   26 command: return_stmt .

    NUM_INT         reduce using rule 26 (command)
    NUM_FLOAT       reduce using rule 26 (command)
    NIL_CNST        reduce using rule 26 (command)
    ID              reduce using rule 26 (command)
    RETURN_STM      reduce using rule 26 (command)
    T_INT           reduce using rule 26 (command)
    T_FLOAT         reduce using rule 26 (command)
    IF_STMT         reduce using rule 26 (command)
    FOR_STMT        reduce using rule 26 (command)
    OUTPUT_WRITE    reduce using rule 26 (command)
    OUTPUT_WRITELN  reduce using rule 26 (command)
    INPUT_READ      reduce using rule 26 (command)
    '{'             reduce using rule 26 (command)
    '}'             reduce using rule 26 (command)
    '+'             reduce using rule 26 (command)
    '-'             reduce using rule 26 (command)
    '%'             reduce using rule 26 (command)
    '?'             reduce using rule 26 (command)
    '!'             reduce using rule 26 (command)


State 51

   27 command: init_variable .

    NUM_INT         reduce using rule 27 (command)
    NUM_FLOAT       reduce using rule 27 (command)
    NIL_CNST        reduce using rule 27 (command)
    ID              reduce using rule 27 (command)
    RETURN_STM      reduce using rule 27 (command)
    T_INT           reduce using rule 27 (command)
    T_FLOAT         reduce using rule 27 (command)
    IF_STMT         reduce using rule 27 (command)
    FOR_STMT        reduce using rule 27 (command)
    OUTPUT_WRITE    reduce using rule 27 (command)
    OUTPUT_WRITELN  reduce using rule 27 (command)
    INPUT_READ      reduce using rule 27 (command)
    '{'             reduce using rule 27 (command)
    '}'             reduce using rule 27 (command)
    '+'             reduce using rule 27 (command)
    '-'             reduce using rule 27 (command)
    '%'             reduce using rule 27 (command)
    '?'             reduce using rule 27 (command)
    '!'             reduce using rule 27 (command)


State 52

   28 command: iteration .

    NUM_INT         reduce using rule 28 (command)
    NUM_FLOAT       reduce using rule 28 (command)
    NIL_CNST        reduce using rule 28 (command)
    ID              reduce using rule 28 (command)
    RETURN_STM      reduce using rule 28 (command)
    T_INT           reduce using rule 28 (command)
    T_FLOAT         reduce using rule 28 (command)
    IF_STMT         reduce using rule 28 (command)
    FOR_STMT        reduce using rule 28 (command)
    OUTPUT_WRITE    reduce using rule 28 (command)
    OUTPUT_WRITELN  reduce using rule 28 (command)
    INPUT_READ      reduce using rule 28 (command)
    '{'             reduce using rule 28 (command)
    '}'             reduce using rule 28 (command)
    '+'             reduce using rule 28 (command)
    '-'             reduce using rule 28 (command)
    '%'             reduce using rule 28 (command)
    '?'             reduce using rule 28 (command)
    '!'             reduce using rule 28 (command)


State 53

   36 init_variable: init_stmt . ';'

    ';'  shift, and go to state 84


State 54

   30 command: output .

    NUM_INT         reduce using rule 30 (command)
    NUM_FLOAT       reduce using rule 30 (command)
    NIL_CNST        reduce using rule 30 (command)
    ID              reduce using rule 30 (command)
    RETURN_STM      reduce using rule 30 (command)
    T_INT           reduce using rule 30 (command)
    T_FLOAT         reduce using rule 30 (command)
    IF_STMT         reduce using rule 30 (command)
    FOR_STMT        reduce using rule 30 (command)
    OUTPUT_WRITE    reduce using rule 30 (command)
    OUTPUT_WRITELN  reduce using rule 30 (command)
    INPUT_READ      reduce using rule 30 (command)
    '{'             reduce using rule 30 (command)
    '}'             reduce using rule 30 (command)
    '+'             reduce using rule 30 (command)
    '-'             reduce using rule 30 (command)
    '%'             reduce using rule 30 (command)
    '?'             reduce using rule 30 (command)
    '!'             reduce using rule 30 (command)


State 55

   29 command: input .

    NUM_INT         reduce using rule 29 (command)
    NUM_FLOAT       reduce using rule 29 (command)
    NIL_CNST        reduce using rule 29 (command)
    ID              reduce using rule 29 (command)
    RETURN_STM      reduce using rule 29 (command)
    T_INT           reduce using rule 29 (command)
    T_FLOAT         reduce using rule 29 (command)
    IF_STMT         reduce using rule 29 (command)
    FOR_STMT        reduce using rule 29 (command)
    OUTPUT_WRITE    reduce using rule 29 (command)
    OUTPUT_WRITELN  reduce using rule 29 (command)
    INPUT_READ      reduce using rule 29 (command)
    '{'             reduce using rule 29 (command)
    '}'             reduce using rule 29 (command)
    '+'             reduce using rule 29 (command)
    '-'             reduce using rule 29 (command)
    '%'             reduce using rule 29 (command)
    '?'             reduce using rule 29 (command)
    '!'             reduce using rule 29 (command)


State 56

   48 expression: func_calling .

    ';'         reduce using rule 48 (expression)
    AND         reduce using rule 48 (expression)
    OR          reduce using rule 48 (expression)
    GREATER     reduce using rule 48 (expression)
    GREATER_EQ  reduce using rule 48 (expression)
    LESS        reduce using rule 48 (expression)
    LESS_EQ     reduce using rule 48 (expression)
    EQUAL       reduce using rule 48 (expression)
    NOT_EQ      reduce using rule 48 (expression)
    '+'         reduce using rule 48 (expression)
    '-'         reduce using rule 48 (expression)
    '*'         reduce using rule 48 (expression)
    '/'         reduce using rule 48 (expression)
    FILTER      reduce using rule 48 (expression)
    MAP         reduce using rule 48 (expression)
    ':'         reduce using rule 48 (expression)


State 57

   73 arith_binary: expression .
   78 lst_binary: expression . FILTER expression
   79           | expression . MAP expression
   80           | expression . ':' expression

    FILTER  shift, and go to state 85
    MAP     shift, and go to state 86
    ':'     shift, and go to state 87

    ';'         reduce using rule 73 (arith_binary)
    AND         reduce using rule 73 (arith_binary)
    OR          reduce using rule 73 (arith_binary)
    GREATER     reduce using rule 73 (arith_binary)
    GREATER_EQ  reduce using rule 73 (arith_binary)
    LESS        reduce using rule 73 (arith_binary)
    LESS_EQ     reduce using rule 73 (arith_binary)
    EQUAL       reduce using rule 73 (arith_binary)
    NOT_EQ      reduce using rule 73 (arith_binary)
    '+'         reduce using rule 73 (arith_binary)
    '-'         reduce using rule 73 (arith_binary)
    '*'         reduce using rule 73 (arith_binary)
    '/'         reduce using rule 73 (arith_binary)


State 58

   50 expression: const .

    ';'         reduce using rule 50 (expression)
    AND         reduce using rule 50 (expression)
    OR          reduce using rule 50 (expression)
    GREATER     reduce using rule 50 (expression)
    GREATER_EQ  reduce using rule 50 (expression)
    LESS        reduce using rule 50 (expression)
    LESS_EQ     reduce using rule 50 (expression)
    EQUAL       reduce using rule 50 (expression)
    NOT_EQ      reduce using rule 50 (expression)
    '+'         reduce using rule 50 (expression)
    '-'         reduce using rule 50 (expression)
    '*'         reduce using rule 50 (expression)
    '/'         reduce using rule 50 (expression)
    FILTER      reduce using rule 50 (expression)
    MAP         reduce using rule 50 (expression)
    ':'         reduce using rule 50 (expression)


State 59

   52 const: number .
